# MangaLens

./: .env.example  .gitignore  README.md  pyproject.toml  start.bat  start.sh  stop.sh  test_pipeline.py  test_run.sh
.github/agents/: frontend.agent.md  gpu.agent.md  pipeline.agent.md  qa.agent.md  server.agent.md
docs/: rocm72-wsl2-setup.md
frontend/: index.html
frontend/css/: style.css  themes.css
frontend/js/: api.js  app.js  progress.js  result.js  settings.js  upload.js
memories/: DECISIONS.md  PLAN.md  PROGRESS.md  QUALITY_IMPROVEMENT.md
server/: config.py  download.py  gpu.py  main.py  state.py
server/pipeline/: __init__.py  bubble_detector.py  compositor.py  magi_detector.py  ocr_engine.py  orchestrator.py  preprocessor.py  text_eraser.py  text_renderer.py  translator.py
server/routers/: result.py  settings.py  upload.py  ws.py
server/schemas/: models.py
server/utils/: image.py  logger.py  reading_order.py
tests/: conftest.py  test_frontend.py  test_gpu.py  test_integration.py  test_pipeline.py  test_reading_order.py  test_security.py  test_upload.py
